# lastfm-milker

./: .env.example  Cargo.toml  Config.toml.example  LICENSE  README.md
src/: config.rs  main.rs  utilities.rs  wrapper.rs
