[package]
name = "lastfm-scrobbler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.1"
md-5 = "0.10"
hex = "0.4.3"
dotenvy_macro = "0.15"
anyhow = "1.0"
rand = "0.8"
