[package]
name = "lastfm-milker"
version = "1.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.7", features = ["time_0_3"] }
toml = "0.8"
open = "5.1"
md-5 = "0.10"
hex = "0.4.3"
anyhow = "1.0"
rand = "0.8"
